--- a/public/css/style.css
+++ b/public/css/style.css
@@ -77,18 +77,12 @@
     box-sizing: border-box;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1,h2,h3,h4,h5,h6 {
     font-family: Sangbleuogserif, 'Times New Roman', sans-serif;
     font-weight: lighter;
 }
 
-p,
-a {
+p,a {
     font-family: Montserrat, sans-serif;
 }
 
@@ -336,6 +330,7 @@ ul li {
     --cl-white: whitesmoke;
     --cl-dark-gray: rgb(85, 85, 85);
     --cl-light-gray: rgb(165, 165, 165);
+    --cursor-opacity:1;
 }
 
 .aboutus-section,
@@ -1622,3 +1617,46 @@ h1.address-title {
       transform: rotate(360deg);
     }
   }
+
+  .animate {
+    opacity: 0;
+    transform: translateX(100px); /* Start outside of the viewport */
+    transition: all 1s ease-out;
+  }
+
+  .animate.slide-in-left {
+    transform: translateX(-100px); /* Start from the left side */
+  }
+  .animate.slide-in-top {
+    transform: translateY(-100px); /* Start from the top side */
+  }
+
+  .animate.visible {
+    opacity: 1;
+    transform: translateX(0); /* Reset position */
+  }
+
+  .perspective::before {
+    content: '';
+    position: absolute;
+    top: 100%;
+    left: 100%;
+    transform: translate(calc(-100% + 40px), calc(-100% + 40px));
+    width: 30px;
+    height: 30px;
+    background: url(/img/cursor-click-02-svgrepo-com.svg);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    transition: transform 0.3s;
+    animation: cursor-hover 3s forwards infinite;
+    opacity: var(--cursor-opacity);
+}
+
+@keyframes cursor-hover {
+    0%{
+        transform: translate(calc(-100% + 40px), calc(-100% + 40px));
+    }
+    100%{
+        transform: translate(calc(-100% - 20px), calc(-100% - 20px));
+    }
+}
