--- a/public/css/product.css
+++ b/public/css/product.css
@@ -66,6 +66,7 @@
     justify-content: space-evenly;
     flex-wrap: wrap;
     gap: 1rem;
+    margin-top: calc(var(--section-padding));
 }
 
 .icon-div{
@@ -234,6 +235,22 @@ button.icon-div.active svg path,button.icon-div.active p{
     max-width: 100%;
     text-transform: capitalize;
 }
+.pro-wrap .pro-sub-detail.flex {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0 1rem;
+    /* padding-right: 10px; */
+}
+.pro-wrap .pro-sub-detail.flex h6,
+.pro-wrap .pro-sub-detail.flex .note-span{
+    flex: 1 0 100%;
+}
+.pro-wrap .pro-sub-detail.flex p{
+    display: inline-block;
+    text-wrap:nowrap;
+    white-space:nowrap;
+    flex: 1 0 31%;
+}
 
 .pro-wrap .pro-sub-detail h6{
     text-transform: capitalize;
@@ -259,6 +276,52 @@ button.icon-div.active svg path,button.icon-div.active p{
     color: var(--cl-light-gray);
 }
 
+.a-download-link{
+    display: flex;
+    /* overflow: hidden; */
+    text-align: center;
+    cursor: pointer;
+    text-decoration: none;
+    width: fit-content;
+    align-items: center;
+    position: relative;
+}
+.a-download-link:hover {
+    cursor: pointer !important;
+}
+
+.a-download-link img.arrow-img{
+    transition: all 0.3s ease-in;
+    transform: rotate(90deg) scale(0.4) translateX(-100%);
+    opacity: 0;
+    position: absolute;
+    left: 100%;
+    height: 1.4em;
+}
+
+
+.a-download-link:hover img.arrow-img{
+    transition: all 0.3s ease-out;
+    transform: rotate(90deg) scale(0.4) translateX(0%);
+    opacity: 1;
+}
+
+.a-download-link .download-span{
+    transition: all 0.3s ease-out;
+    text-decoration: none;
+    font-size: 0.8em;
+    color: var(--cl-blue-logo);
+    text-align: center;
+    padding-left: 10px;
+}
+
+.a-download-link:hover .download-span, 
+.a-download-link:focus .download-span{
+    transition: all 0.3s ease-out;
+    scale: 1.1;
+    color : var(--cl-sky-logo);
+}
+
 
 .application-img{
     max-width: 100%;
@@ -267,11 +330,12 @@ button.icon-div.active svg path,button.icon-div.active p{
     align-items: start;
     justify-content: start;
     flex-wrap: wrap;
-    gap: 2rem;
+    gap: 1.6rem;
 }
 .application-img .app-img{
-    aspect-ratio: 1/1;
-    width: 180px;
+    display: flex;
+    flex-direction: column;
+    max-width: 170px;
 }
 .application-img img{
     max-width: 100%;
