--- a/public/css/responsiv.css
+++ b/public/css/responsiv.css
@@ -39,8 +39,8 @@
         padding: 0 20px;
     }
 
-    .logo-wrraper {
-        height: 40px;
+    :root {
+        --logo-wrraper-height: 40px;
     }
 
     section.product-section .description-wrapper {
@@ -92,10 +92,6 @@
         padding: 0 15px;
     }
 
-    .logo-wrraper {
-        height: 40px;
-    }
-
     nav ul {
         display: none;
     }
@@ -106,6 +102,7 @@
 
     :root {
         --header-blur: 10px;
+        --logo-wrraper-height: 40px;
     }
 
     .about-us-description p {
@@ -159,6 +156,9 @@
         flex-direction: column;
         padding: 1rem;
     }
+    .info-title-wrapper{
+        text-align: center;
+    }
 }
 
 /* Responsive styles for small show devices */
@@ -170,8 +170,9 @@
         padding: 0 10px;
     }
 
-    .logo-wrraper {
-        height: 35px;
+    :root {
+        --logo-wrraper-height: 35px;
+        /* --header-blur: 10px !important;  */
     }
 
     nav ul {
@@ -180,10 +181,6 @@
 
     .button-icon {
         display: flex;
-    }
-
-    :root {
-        --header-blur: 10px !important; 
     }
 
     .about-us-description,
@@ -254,6 +251,12 @@
     .pro-wrap{
         text-align: center;
     }
+    .a-download-link{
+        justify-self: center;
+    }
+    .a-download-link .download-span{
+        padding-left: 0px;
+    }
     .more-pro-wrapper{
         flex-direction: column;
     }
@@ -280,6 +283,9 @@
         flex-direction: column;
         padding: 1rem;
     }
+    .info-title-wrapper{
+        text-align: center;
+    }
 }
 
 @media (max-width: 390px) {
@@ -305,6 +311,9 @@
     .enquiry-wrapper.flex-50{
         flex-direction: column;
         padding: 1rem;
+    }
+    .info-title-wrapper{
+        text-align: center;
     }
     .flex-50-child{
         padding: 1rem 0;
