--- a/public/css/style.css
+++ b/public/css/style.css
@@ -92,7 +92,7 @@
     --logo-wrraper-height:50px
 }
 
-h1,h2,h3,h4,h5,h6 {
+h1,h2,h3,h6 {
     font-family: Sangbleuogserif, 'Times New Roman', sans-serif;
     font-weight: lighter;
 }
@@ -174,8 +174,7 @@ header>* {
     --logo-height: calc(var(--logo-wrraper-height) * 2);
 }
 
-.comapny-name h1,
-.comapny-name h1.light-h1 {
+.comapny-name h1 {
     line-height: 1.25em;
     transition: transform 0.3s;
     font-family: 'Quicksand', sans-serif;
@@ -187,13 +186,7 @@ header>* {
     font-size: 1.1em;
 }
 
-.comapny-name h1.light-h1 {
-    color: var(--cl-sky-logo);
-    font-size: 1em;
-}
-
-.header-wrraper.scroll .comapny-name h1,
-.header-wrraper.scroll .comapny-name h1.light-h1 {
+.header-wrraper.scroll .comapny-name h1 {
     transition: all 0.3s;
     transform: translateX(-100%);
 }
@@ -251,7 +244,7 @@ nav ul.show::before {
     width: 100%;
     top: 0;
     left: 0;
-    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 20%, rgba(255, 255, 255, 0));
+    background: linear-gradient(to bottom, rgba(120, 120, 120, 0.2) 20%, rgba(76, 76, 76, 0.2));
     backdrop-filter: blur(var(--header-blur));
 }
 
@@ -344,7 +337,6 @@ ul li {
 
 .aboutus-section,
 .product-section,
-.product-d-section,
 .career-section,
 .contact-section {
     padding-top: var(--section-padding);
@@ -536,10 +528,6 @@ html {
     transition: transform 0.3s;
 }
 
-button.left .svg-line {
-    transform: translateX(calc((24px - 6px - 100%)));
-}
-
 /* * * * * * * * * * *  about us * * * * * * * * */
 .aboutus-section {
     z-index: 5;
@@ -607,23 +595,6 @@ button.left .svg-line {
     background: url(/img/shield_arrow.JPG.JPG);
     mix-blend-mode: exclusion;
 } */
-
-.our-mission-head>h1:nth-child(1) {
-    font-size: max(8vw, 8vh);
-    line-height: max(7.5vw, 7.5vh);
-    white-space: nowrap;
-    mask: linear-gradient(to top, rgba(0, 0, 0, 0), white);
-}
-
-.our-mission-head>h1:nth-child(2) {
-    font-size: max(4vw, 4vh);
-    line-height: max(0.5vw, 0.5vh);
-}
-
-.our-mission-description>p {
-    font-size: 1.8rem;
-    text-align: left;
-}
 
 .perspective {
     width: max(20vw, 300px);
@@ -839,17 +810,6 @@ button.left .svg-line {
 .module-div div.product-details {
     text-align: right;
     align-items: end;
-}
-
-.highlight-span
- {
-    font-size: 1.1em;
-    color: rgb(70, 70, 70);
-    font-weight: 450;
-}
-
-.bold {
-    font-weight: 600;
 }
 
 .product-details h1 {
@@ -1108,27 +1068,6 @@ footer div.footer-head {
 }
 
 /* * * * * * * * * * * * * contact us button design * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
-.contact-us {
-    padding: 0.3rem 0.7rem;
-    --bg-opacity: 0.85;
-    background: linear-gradient(125deg,
-            hsla(214, 70%, 37%, var(--bg-opacity)),
-            hsla(224, 57%, 51%, var(--bg-opacity)),
-            hsla(203, 79%, 45%, var(--bg-opacity)),
-            hsla(198, 100%, 63%, var(--bg-opacity)));
-    border-radius: 7px;
-    transition: all 0.3s;
-    background-size: 200% 200%;
-    background-position: 30% 40%;
-}
-
-.contact-us:hover {
-    background-position: 80% 80%;
-}
-
-.contact-us>* {
-    color: var(--cl-white) !important;
-}
 
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
 
@@ -1414,11 +1353,6 @@ footer div.footer-head {
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
 
 /* * * * * * * * * * * * * contact page design * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
-
-.contact-divform-wrapper {
-    padding: 2rem 1rem;
-    position: relative;
-}
 
 .contact-section .gradient-bg::before {
     content: '';
